Project

General

Profile

Actions

Bug #44353

closed

s3tests that list buckets with prefix/delimiter fail on sharded buckets

Added by Casey Bodley about 4 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

s3tests_boto3.functional.test_s3.test_bucket_list_delimiter_prefix ... FAIL
s3tests_boto3.functional.test_s3.test_bucket_listv2_delimiter_prefix ... FAIL
s3tests_boto3.functional.test_s3.test_bucket_list_delimiter_prefix_underscore ... FAIL
s3tests_boto3.functional.test_s3.test_bucket_listv2_delimiter_prefix_underscore ... FAIL
s3tests_boto3.functional.test_s3.test_bucket_list_delimiter_not_skip_special ... FAIL


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #44652: nautilus: s3tests that list buckets with prefix/delimiter fail on sharded bucketsRejectedActions
Actions #1

Updated by Casey Bodley about 4 years ago

  • Status changed from New to Fix Under Review
  • Backport changed from nautilus to nautilus?
  • Pull request ID set to 33628
Actions #2

Updated by Casey Bodley about 4 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport changed from nautilus? to nautilus
Actions #3

Updated by Nathan Cutler about 4 years ago

  • Copied to Backport #44652: nautilus: s3tests that list buckets with prefix/delimiter fail on sharded buckets added
Actions #4

Updated by Backport Bot over 1 year ago

  • Tags set to backport_processed
Actions #5

Updated by Konstantin Shalygin over 1 year ago

  • Status changed from Pending Backport to Resolved
  • Tags deleted (backport_processed)
Actions

Also available in: Atom PDF