rgw: bucket_list_ordered advances past duplicate common prefixes

we may see the same common prefix from more than one shard. when we
detect a duplicate, we need to advance past it. otherwise, we may make
the wrong decision about is_truncated because the shards with
duplicates won't be at_end()

Fixes: https://tracker.ceph.com/issues/44353

Signed-off-by: Casey Bodley <cbodley@redhat.com>